--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,13 +19,23 @@ repos:
     rev: 23.11.0
     hooks:
     -   id: black
+        args: [--line-length=120]
 
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.1.1
     hooks:
     -   id: flake8
+        args: [--max-line-length=120]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.6.1
     hooks:
     -   id: mypy
+
+-   repo: local
+    hooks:
+    -   id: pytest
+        entry: pytest
+        name: pytest
+        language: system
+        types: [python]
