--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: poetry install
       - name: Run linter flake8
         run: |
-          poetry run flake8
+          poetry run flake8 --max-line-length=120
       - name: Run type checker
         run: |
           poetry run mypy
