--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           poetry run flake8 --max-line-length=120
       - name: Run type checker
         run: |
-          poetry run mypy
+          poetry run mypy .
       - name: Run tests
         run: |
           poetry run pytest ./tests
